Docker and react changes: - Changing docker configuration to hopefully fix it - Adding empty file in node_modules commenting out node_modules from gitignore to make the folder exist on git - Adding .dockerignore - Downgrading react-scripts to 3.4.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,25 @@ services:
     build:
       context: ./src/client
       dockerfile: ../../docker/Dockerfile
-    working_dir: /app/src/client
-    command: npm start
     volumes:
-      - '.:/app'
+      - './src/client:/app'
+      - '/app/node_modules'
     ports:
       - 3000:3000
+    command: npm start
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+
 
   server:
     container_name: server
     build:
       context: ./src/server
       dockerfile: ../../docker/Dockerfile
-    working_dir: /app/src/server
     command: npm start
     volumes:
-    - '.:/app'
-
+      - './src/server:/app'
+      - '/app/node_modules'
     ports:
       - 9000:9000
 
