--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-src/client/node_modules/
-src/server/node_modules/
+# src/client/node_modules/*
+# src/server/node_modules/*
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 
