--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# src/client/node_modules/*
-# src/server/node_modules/*
+src/*/node_modules/*
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
