--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.0",
-    "node-sass": "^4.14.0"
+    "node-sass": "^4.14.0",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
