--- a/src/server/package.json
+++ b/src/server/package.json
@@ -11,6 +11,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mongoose": "~5.9.14",
+    "bcrypt": "~4.0.1",
+    "express-session": "~1.17.1"
   }
 }
