--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 src/*/node_modules/*
-
+src/db/mongo/*
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
