--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,16 @@ services:
     ports:
       - 9000:9000
 
+  db:
+    image: 'mongo'
+    container_name: 'db'
+    environment:
+      - MONGO_INITDB_DATABASE=db
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=secret
+    volumes:
+      - ./src/db/mongodb:/home/mongodb
+      - ./src/db/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ./src/db/mongo:/data/db
+    ports:
+      - '27017-27019:27017-27019'
