More mongo setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,12 +35,13 @@ services:
     image: 'mongo'
     container_name: 'db'
     environment:
-      - MONGO_INITDB_DATABASE=db
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=secret
+      - MONGO_INITDB_DATABASE=db
     volumes:
       - ./src/db/mongodb:/home/mongodb
       - ./src/db/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - ./src/db/mongo:/data/db
     ports:
-      - '27017-27019:27017-27019'
+      - '27017:27017'
+    command: mongod
