--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 src/*/node_modules/*
 src/db/mongo/*
+depreciated
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
