--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,19 +1,16 @@
 {
   "name": "server",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "mongoose": "~5.9.14",
-    "bcrypt": "~4.0.1",
-    "express-session": "~1.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
   }
 }
