--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "^3.4.0",
     "node-sass": "^4.14.0",
     "react-router-dom": "^5.1.2",
-    "axios": "0.19.2"
+    "axios": "^0.19.2",
+    "js-cookie": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
