--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,20 @@
 version: '2.2'
 
 services:
+  postgres:
+    image: "postgres"
+    env_file:
+      - db.env
+    volumes:
+      - db:/var/lib/postgresql/data/ 
 
+  django:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+    volumes:
+      - '.:/app/'
+    command: python manage.py runserver 0.0.0.0:8000
+
+volumes:
   db:
-    image: 'mongo'
-    container_name: 'db'
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=secret
-      - MONGO_INITDB_DATABASE=db
-    volumes:
-      - ./src/db/mongodb:/home/mongodb
-      - ./src/db/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - ./src/db/mongo:/data/db
-    ports:
-      - '27017:27017'
-    command: mongod
-
-  client:
-    stdin_open: true
-    container_name: client
-    build:
-      context: ./src/client
-      dockerfile: ../../docker/Dockerfile
-    volumes:
-      - './src/client:/app'
-      - '/app/node_modules'
-    ports:
-      - 3000:3000
-    command: npm start
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    stdin_open: true
-
-
-  server:
-    container_name: server
-    build:
-      context: ./src/server
-      dockerfile: ../../docker/Dockerfile
-    command: npm start
-    volumes:
-      - './src/server:/app'
-      - '/app/node_modules'
-    ports:
-      - 9000:9000
-    depends_on:
-      - 'db'
