--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,4 @@
-FROM node:13
-WORKDIR /app
-ADD . /app
-COPY . ./
-RUN npm i
-
+FROM python:3
+WORKDIR app/
+COPY . app/
+RUN pip install -r app/requirements.txt
