--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,11 @@ verify_ssl = true
 [packages]
 django = "*"
 psycopg2 = "*"
+typer = "*"
 
 [requires]
 python_version = "3.8"
 
 [scripts]
-start = "python manage.py runserver"
+start = "python run.py"
 migrate = "python manage.py migrate"
