--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "main": "index.js",
   "repository": "git@github.com-philhabell:philhabell/philbell.uk.git",
   "author": "philhabell <philhabell@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "lit-element": "^2.4.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  }
 }
