--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ verify_ssl = true
 django = "*"
 psycopg2 = "*"
 typer = "*"
+djangorestframework = "*"
+markdown = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.8"
