--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ typer = "*"
 djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
+linkedin_scraper = "*"
+black = "*"
 
 [requires]
 python_version = "3.8"
@@ -20,3 +22,4 @@ python_version = "3.8"
 start = "python run.py"
 migrate = "python manage.py migrate"
 collect = "python manage.py collectstatic"
+format = "black . --line-length 99"
