--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ markdown = "*"
 django-filter = "*"
 linkedin_scraper = "*"
 black = "*"
+search-torrent = "*"
 
 [requires]
 python_version = "3.8"
