--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "philhabell <philhabell@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "js-cookie": "^2.2.1",
     "lit-element": "^2.4.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
