--- a/Pipfile
+++ b/Pipfile
@@ -12,9 +12,7 @@ typer = "*"
 djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
-linkedin_scraper = "*"
-black = "*"
-we_get = {git = "https://github.com/rachmadaniHaryono/we-get"}
+we_get = {git = "https://github.com/philhabell/we-get"}
 
 [requires]
 python_version = "3.8"
