--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ we_get = {git = "https://github.com/rachmadaniHaryono/we-get@dev"}
 imdbpy = "*"
 django-fake-database-backends = "*"
 qbittorrent-api = "*"
-black = "*"
+black = "==20.8b1"
 
 [requires]
 python_version = "3.8"
