--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "xml2js": "^0.4.23"
   },
   "scripts": {
-    "prettier": "prettier \"**/*.{js,css,scss}\" --write",
-    "watch": "webpack --watch"
+    "prettier": "prettier \"**/*.{js,css,scss}\" --write"
   }
 }
