--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ beautifulsoup4 = "^4.9.3"
 start = "scripts:start"
 migrate = "scripts:migrate"
 format = "scripts:format"
+start_prod = "scripts:start_prod"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
