getting manage table working with polling

--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "author": "philhabell <philhabell@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "js-cookie": "^2.2.1",
-    "lit-element": "^2.4.0",
-    "prettier": "^2.1.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "xml2js": "^0.4.23"
+    "js-cookie": "*",
+    "lit-element": "*",
+    "prettier": "*",
+    "webpack": "*",
+    "webpack-cli": "*",
+    "xml2js": "*"
   },
   "scripts": {
     "prettier": "prettier \"**/*.{js,css,scss}\" --write",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch -d --display-error-details --display-reasons"
   }
 }
