--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Philip Bell"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9.0"
 django = "*"
 psycopg2-binary = "*"
 typer = "*"
@@ -16,11 +16,11 @@ imdbpy = "*"
 django-fake-database-backends = "*"
 qbittorrent-api = "*"
 black = "==20.8b1"
-we-get = {git = "https://github.com/philhabell/we-get.git", branch = "add-sfw-filter-to-tpb"}
 beautifulsoup4 = "^4.9.3"
 
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.8.4"
 
 
 [tool.poetry.scripts]
