adding weget back

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-fake-database-backends = "*"
 qbittorrent-api = "*"
 black = "==20.8b1"
 beautifulsoup4 = "^4.9.3"
+we-get = {git = "https://github.com/philhabell/we-get.git"}
 
 
 [tool.poetry.dev-dependencies]
