--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ qbittorrent-api = "*"
 black = "==20.8b1"
 beautifulsoup4 = "^4.9.3"
 we-get = {git = "https://github.com/rachmadaniHaryono/we-get.git"}
+django-letsencrypt = "^4.0.0"
 
 
 [tool.poetry.dev-dependencies]
