--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ django-fake-database-backends = "*"
 qbittorrent-api = "*"
 black = "==20.8b1"
 beautifulsoup4 = "^4.9.3"
-we-get = {git = "https://github.com/rachmadaniHaryono/we-get.git"}
 django-letsencrypt = "^4.0.0"
+the-python-bay = "^1.1.9"
 
 
 [tool.poetry.dev-dependencies]
