Improve mobile login (#103)
* commit

* improving mobile experience

* changing names and fixing desktop nav

* moving to use built in logoutview renaming and formatting

* deleting old login form

* adding css prefixes

* adding babel

* upping versions and adding regen runtime

* updating lock files

--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "author": "philhabell <philhabell@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "js-cookie": "*",
-    "lit-element": "*",
-    "prettier": "*",
-    "webpack": "*",
-    "webpack-cli": "*",
-    "xml2js": "*"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "js-cookie": "^2.2.1",
+    "lit-element": "^2.4.0",
+    "prettier": "^2.2.1",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
+    "xml2js": "^0.4.23",
+    "regenerator-runtime": "^0.13.7"
   },
   "scripts": {
     "prettier": "prettier \"**/*.{js,css,scss}\" --write",
-    "watch": "webpack --watch -d --display-error-details --display-reasons"
+    "watch": "webpack --watch"
   }
 }
