--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "prettier": "prettier \"**/*.{js,css,scss}\" --write",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "build": "webpack"
   }
 }
