making imbd lookup and folder use search term instead of rows name, also updating packages and migrating to sqllite

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Philip Bell"]
 python = "^3.9.0"
 lxml = "==4.6.1"
 django = "*"
+cryptography = "3.1.1"
 psycopg2-binary = "*"
 typer = "*"
 djangorestframework = "*"
