--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "js-cookie": "^2.2.1",
     "lit-element": "^2.4.0",
     "prettier": "^2.2.1",
+    "regenerator-runtime": "^0.13.7",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
-    "xml2js": "^0.4.23",
-    "regenerator-runtime": "^0.13.7"
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "prettier": "prettier \"**/*.{js,css,scss}\" --write",
