--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Philip Bell"]
 [tool.poetry.dependencies]
 python = "^3.9.0"
 lxml = "==4.6.1"
-django = "*"
+django = "<4"
 cryptography = "3.1.1"
 psycopg2-binary = "*"
 typer = "*"
