--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ qbittorrent-api = "*"
 the-python-bay = "^1.1.9"
 certbot-django = "^0.2.0"
 asymmetric-jwt-auth = "^0.5.0"
+uWSGI = "^2.0.20"
+psycopg2 = "^2.9.3"
 
 
 [tool.poetry.dev-dependencies]
